mobile version started, fixed width after 1460px, accordion removed for transcription and tooltip added on the slim path

--- a/contentStep5.html
+++ b/contentStep5.html
@@ -1,4 +1,4 @@
-<div class="col col-md-12 col-lg-4">
+<div class="col-xs-12 col-md-4 col-lg-4">
 	<h3>Overview</h3>
 	<div class="scroll">
 		<p>This step describes the process of applying for all of the vital documents someone needs to move forward in the housing process. Outreach teams do not always the funds to cover the cost of vital documents, leaving homeless New Yorkers with the difficult task of paying for these themselves. </p>
@@ -102,7 +102,7 @@
 		</div>
 	</div>
 </div>
-<div class="col col-md-12 col-lg-4">
+<div class="col-xs-12 col-md-4 col-lg-4">
 	<h3>Recommendations</h3>
 	<div class="scroll">
 		<p>Our recommendations provide ways to reduce barriers to obtaining documentation and benefits needed to move forward in the housing process. The city has effective services which we recommend be enhanced and continued, and we also advocate for new policies to better serve folks experiencing street homelessness. </p>
@@ -158,23 +158,9 @@
 		</div>
 	</div>
 </div>
-<div class="col col-md-12 col-lg-4">
-	<ul class="nav nav-tabs" id="myTab" role="tablist">
-		<li class="nav-item">
-			<a class="nav-link active" id="home-tab" data-toggle="tab" href="#home" role="tab" aria-controls="home" aria-selected="true">Video</a>
-		</li>
-		<li class="nav-item">
-			<a class="nav-link" id="profile-tab" data-toggle="tab" href="#profile" role="tab" aria-controls="profile" aria-selected="false">Transcript</a>
-		</li>
-	</ul>
-	<div class="tab-content" id="myTabContent">
-		<div class="tab-pane fade show active" id="home" role="tabpanel" aria-labelledby="home-tab">
-			<div class="embed-responsive embed-responsive-16by9" style="margin-top: 1rem">
-				<iframe class="embed-responsive-item" src="https://www.youtube.com/embed/zg7-gBasuFU?rel=0" allowfullscreen></iframe>
-			</div>
-		</div>
-		<div class="tab-pane fade" id="profile" role="tabpanel" aria-labelledby="profile-tab">
-			<p style="margin-top: .4rem">Transcript here</p>
-		</div>
+<div class="col-xs-12 col-md-4 col-lg-4">
+<h3>Video</h3>
+	<div class="embed-responsive embed-responsive-16by9" style="margin-top: 1rem">
+		<iframe class="embed-responsive-item" src="https://www.youtube.com/embed/zg7-gBasuFU?rel=0" allowfullscreen></iframe>
 	</div>
 </div>
