--- a/contentStep1.html
+++ b/contentStep1.html
@@ -1,4 +1,4 @@
-<div class="col col-md-12 col-lg-4">
+<div class="col-xs-12 col-md-4 col-lg-4">
 	<h3>Overview</h3>
 	<div class="scroll">
 		<p>People need to live on the streets nine months to meet the city’s “chronicity requirement.” Until reaching that point, and working with outreach teams to prove it, the majority of housing programs, transitional or permanent, are not options.</p>
@@ -97,7 +97,7 @@
 		</div>
 	</div>
 </div>
-<div class="col col-md-12 col-lg-4">
+<div class="col-xs-12 col-md-4 col-lg-4">
 	<h3>Recommendations</h3>
 	<div class="scroll">
 		<p>Below, we have proposed a series of options for people who do not yet meet the 9-month chronicity requirement. The city should do everything in its power to avoid forcing folks to live outside for 9 months while waiting for placement.</p>
@@ -151,23 +151,9 @@
 		</div>
 	</div>
 </div>
-<div class="col col-md-12 col-lg-4">
-	<ul class="nav nav-tabs" id="myTab" role="tablist">
-		<li class="nav-item">
-			<a class="nav-link active" id="home-tab" data-toggle="tab" href="#home" role="tab" aria-controls="home" aria-selected="true">Video</a>
-		</li>
-		<li class="nav-item">
-			<a class="nav-link" id="profile-tab" data-toggle="tab" href="#profile" role="tab" aria-controls="profile" aria-selected="false">Transcript</a>
-		</li>
-	</ul>
-	<div class="tab-content" id="myTabContent">
-		<div class="tab-pane fade show active" id="home" role="tabpanel" aria-labelledby="home-tab">
-			<div class="embed-responsive embed-responsive-16by9" style="margin-top: 1rem">
-				<iframe class="embed-responsive-item" src="https://www.youtube.com/embed/1T0UfLO-kyU?rel=0&cc_load_policy=1" allowfullscreen></iframe>
-			</div>
-		</div>
-		<div class="tab-pane fade" id="profile" role="tabpanel" aria-labelledby="profile-tab">
-			<p style="margin-top: .4rem">Transcript here</p>
-		</div>
+<div class="col-xs-12 col-md-4 col-lg-4">
+	<h3>Video</h3>
+	<div class="embed-responsive embed-responsive-16by9" style="margin-top: 1rem">
+		<iframe class="embed-responsive-item" src="https://www.youtube.com/embed/1T0UfLO-kyU?rel=0&cc_load_policy=1" allowfullscreen></iframe>
 	</div>
 </div>
