--- a/contentStep2.html
+++ b/contentStep2.html
@@ -1,4 +1,4 @@
-<div class="col col-md-12 col-lg-4">
+<div class="col-xs-12 col-md-4 col-lg-4">
 	<h3>Overview</h3>
 	<div class="scroll">
 		<p>People need to be &quot;sighted&quot; at least three times, at random and bedded down, by DHS-contracted street outreach teams to be assigned an outreach case manager. They tell us this part of the process is confusing and dehumanizing.</p>
@@ -67,7 +67,7 @@
 		</div>
 	</div>
 </div>
-<div class="col col-md-12 col-lg-4">
+<div class="col-xs-12 col-md-4 col-lg-4">
 	<h3>Recommendations</h3>
 	<div class="scroll">
 		<p>We recommend overhauling the “sightings” process, including but not limited to the way that providers explain and speak about the eligibility and sightings requirements. Our recommendations will create more transparent and accessible services for individuals experiencing street homelessness. </p>
@@ -151,23 +151,9 @@
 		</div>
 	</div>
 </div>
-<div class="col col-md-12 col-lg-4">
-	<ul class="nav nav-tabs" id="myTab" role="tablist">
-		<li class="nav-item">
-			<a class="nav-link active" id="home-tab" data-toggle="tab" href="#home" role="tab" aria-controls="home" aria-selected="true">Video</a>
-		</li>
-		<li class="nav-item">
-			<a class="nav-link" id="profile-tab" data-toggle="tab" href="#profile" role="tab" aria-controls="profile" aria-selected="false">Transcript</a>
-		</li>
-	</ul>
-	<div class="tab-content" id="myTabContent">
-		<div class="tab-pane fade show active" id="home" role="tabpanel" aria-labelledby="home-tab">
-			<div class="embed-responsive embed-responsive-16by9" style="margin-top: 1rem">
-				<iframe class="embed-responsive-item" src="https://www.youtube.com/embed/kcjLSmCGiFE?rel=0" allowfullscreen></iframe>
-			</div>
-		</div>
-		<div class="tab-pane fade" id="profile" role="tabpanel" aria-labelledby="profile-tab">
-			<p style="margin-top: .4rem">Transcript here</p>
-		</div>
+<div class="col-xs-12 col-md-4 col-lg-4">
+	<h3>Video</h3>
+	<div class="embed-responsive embed-responsive-16by9" style="margin-top: 1rem">
+		<iframe class="embed-responsive-item" src="https://www.youtube.com/embed/kcjLSmCGiFE?rel=0" allowfullscreen></iframe>
 	</div>
 </div>
