--- a/contentStep3.html
+++ b/contentStep3.html
@@ -1,4 +1,4 @@
-<div class="col col-md-12 col-lg-4">
+<div class="col-xs-12 col-md-4 col-lg-4">
 	<h3>Overview</h3>
 	<div class="scroll">
 		<p>Street homeless New Yorkers must have lived on the streets for nine months out of the last two years to be determined eligible for most transitonal or permanent housing. When we ask people the hardest part about getting into housing, almost everyone tells us, "the waiting.</p>
@@ -54,7 +54,7 @@
 		</div>
 	</div>
 </div>
-<div class="col col-md-12 col-lg-4">
+<div class="col-xs-12 col-md-4 col-lg-4">
 	<h3>Recommendations</h3>
 	<div class="scroll">
 		<p>Our recommendations promote programs which reduce barriers to moving into transitional housing. Specifically, we suggest a number of avenues that would allow street homeless New Yorkers to move inside without having to wait nine months.</p>
@@ -109,23 +109,9 @@
 		</div>
 	</div>
 </div>
-<div class="col col-md-12 col-lg-4">
-	<ul class="nav nav-tabs" id="myTab" role="tablist">
-		<li class="nav-item">
-			<a class="nav-link active" id="home-tab" data-toggle="tab" href="#home" role="tab" aria-controls="home" aria-selected="true">Video</a>
-		</li>
-		<li class="nav-item">
-			<a class="nav-link" id="profile-tab" data-toggle="tab" href="#profile" role="tab" aria-controls="profile" aria-selected="false">Transcript</a>
-		</li>
-	</ul>
-	<div class="tab-content" id="myTabContent">
-		<div class="tab-pane fade show active" id="home" role="tabpanel" aria-labelledby="home-tab">
-			<div class="embed-responsive embed-responsive-16by9" style="margin-top: 1rem">
-				<iframe class="embed-responsive-item" src="https://www.youtube.com/embed/dubZMoqyd9I?rel=0" allowfullscreen></iframe>
-			</div>
-		</div>
-		<div class="tab-pane fade" id="profile" role="tabpanel" aria-labelledby="profile-tab">
-			<p style="margin-top: .4rem">Transcript here</p>
-		</div>
+<div class="col-xs-12 col-md-4 col-lg-4">
+	<h3>Video</h3>
+	<div class="embed-responsive embed-responsive-16by9" style="margin-top: 1rem">
+		<iframe class="embed-responsive-item" src="https://www.youtube.com/embed/dubZMoqyd9I?rel=0" allowfullscreen></iframe>
 	</div>
 </div>
