--- a/contentStep6.html
+++ b/contentStep6.html
@@ -1,4 +1,4 @@
-<div class="col col-md-12 col-lg-4">
+<div class="col-xs-12 col-md-4 col-lg-4">
 	<h3>Overview</h3>
 	<div class="scroll">
 		<p>There is a lengthy process for determining which type of housing people may be eligible for. Applicants fill out forms and participate in mandatory interviews and evaluations. Afterwards, they are likely to be deemed eligible for supportive housing and/or a housing voucher.</p>
@@ -134,7 +134,7 @@
 		</div>
 	</div>
 </div>
-<div class="col col-md-12 col-lg-4">
+<div class="col-xs-12 col-md-4 col-lg-4">
 	<h3>Recommendations</h3>
 	<div class="scroll">
 		<p>New York needs to fundamentally shift the way it views its street homeless citizens and subsequently adjust how housing eligibility is determined. New York should follow HUD requirements and eliminate the processes whereby people are forced to prove they are "housing ready" before obtaining housing.</p>
@@ -190,23 +190,9 @@
 		</div>
 	</div>
 </div>
-<div class="col col-md-12 col-lg-4">
-	<ul class="nav nav-tabs" id="myTab" role="tablist">
-		<li class="nav-item">
-			<a class="nav-link active" id="home-tab" data-toggle="tab" href="#home" role="tab" aria-controls="home" aria-selected="true">Video</a>
-		</li>
-		<li class="nav-item">
-			<a class="nav-link" id="profile-tab" data-toggle="tab" href="#profile" role="tab" aria-controls="profile" aria-selected="false">Transcript</a>
-		</li>
-	</ul>
-	<div class="tab-content" id="myTabContent">
-		<div class="tab-pane fade show active" id="home" role="tabpanel" aria-labelledby="home-tab">
-			<div class="embed-responsive embed-responsive-16by9" style="margin-top: 1rem">
-				<iframe class="embed-responsive-item" src="https://www.youtube.com/embed/U_XYhFWQUwQ?rel=0" allowfullscreen></iframe>
-			</div>
-		</div>
-		<div class="tab-pane fade" id="profile" role="tabpanel" aria-labelledby="profile-tab">
-			<p style="margin-top: .4rem">Transcript here</p>
-		</div>
+<div class="col-xs-12 col-md-4 col-lg-4">
+<h3>Video</h3>
+	<div class="embed-responsive embed-responsive-16by9" style="margin-top: 1rem">
+		<iframe class="embed-responsive-item" src="https://www.youtube.com/embed/U_XYhFWQUwQ?rel=0" allowfullscreen></iframe>
 	</div>
 </div>
