--- a/index.html
+++ b/index.html
@@ -12,46 +12,46 @@
 	    <script type="text/javascript" src="js/script.js"></script>
 	</head>
 	<body>
+		<nav class="navbar navbar-expand-lg sticky-top navbar-light bg-light d-md-none d-lg-none d-xl-none">
+			<button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarTogglerDemo03" aria-controls="navbarTogglerDemo03" aria-expanded="false" aria-label="Toggle navigation">
+				<span class="navbar-toggler-icon"></span>
+			</button>
+			<a class="navbar-brand logo logoMobile" href="#">Human</a>
+			<div class="collapse navbar-collapse" id="navbarTogglerDemo03">
+				<ul class="navbar-nav mr-auto mt-2 mt-lg-0">
+					<li class="nav-item active">
+						<a class="nav-link" href="#step_one">Step 1 - Become Street Homeless</a>
+					</li>
+					<li class="nav-item">
+						<a class="nav-link" href="#step_two">Step 2 - Sighting Process</a>
+					</li>
+					<li class="nav-item">
+						<a class="nav-link" href="#step_three">Step 3 - 9 Months on street</a>
+					</li>
+					<li class="nav-item">
+						<a class="nav-link" href="#step_four">Step 4 - Safe Haven Assignment</a>
+					</li>
+					<li class="nav-item">
+						<a class="nav-link" href="#step_five">Step 5 - Gathering Documents</a>
+					</li>
+					<li class="nav-item">
+						<a class="nav-link" href="#step_six">Step 6 - Housing Eligibility</a>
+					</li>
+					<li class="nav-item">
+						<a class="nav-link" href="#step_seven">Step 7 - Searching for Housing</a>
+					</li>
+					<li class="nav-item">
+						<a class="nav-link" href="#step_eight">Step 8 - Transition into Housing</a>
+					</li>
+					<div class="dropdown-divider"></div>
+					<li class="nav-item">
+						<a class="nav-link" href="#" data-toggle="modal" data-target="#exampleModal">Learn more about us</a>
+					</li>
+				</ul>
+			</div>
+		</nav>
+		<div id="modalLearnMore"></div>
 	  	<div class="wrapper">
-	  		<div id="modalLearnMore"></div>
-	  		<nav class="navbar navbar-expand-lg sticky-top navbar-light bg-light d-md-none d-lg-none d-xl-none">
-					<button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarTogglerDemo03" aria-controls="navbarTogglerDemo03" aria-expanded="false" aria-label="Toggle navigation">
-						<span class="navbar-toggler-icon"></span>
-					</button>
-					<a class="navbar-brand" href="#">Human</a>
-					<div class="collapse navbar-collapse" id="navbarTogglerDemo03">
-						<ul class="navbar-nav mr-auto mt-2 mt-lg-0">
-							<li class="nav-item active">
-								<a class="nav-link" href="#step_one">Step 1 - Become Street Homeless</a>
-							</li>
-							<li class="nav-item">
-								<a class="nav-link" href="#step_two">Step 2 - Sighting Process</a>
-							</li>
-							<li class="nav-item">
-								<a class="nav-link" href="#step_three">Step 3 - 9 Months on street</a>
-							</li>
-							<li class="nav-item">
-								<a class="nav-link" href="#step_four">Step 4 - Safe Haven Assignment</a>
-							</li>
-							<li class="nav-item">
-								<a class="nav-link" href="#step_five">Step 5 - Gathering Documents</a>
-							</li>
-							<li class="nav-item">
-								<a class="nav-link" href="#step_six">Step 6 - Housing Eligibility</a>
-							</li>
-							<li class="nav-item">
-								<a class="nav-link" href="#step_seven">Step 7 - Searching for Housing</a>
-							</li>
-							<li class="nav-item">
-								<a class="nav-link" href="#step_eight">Step 8 - Transition into Housing</a>
-							</li>
-							<div class="dropdown-divider"></div>
-							<li class="nav-item">
-								<a class="nav-link" href="#" data-toggle="modal" data-target="#exampleModal">Learn more about us</a>
-							</li>
-						</ul>
-					</div>
-				</nav>
 	  		<!-- Modal --
 	  		<object data="learnmore.html"> 
 				Your browser doesn’t support the object tag. 
@@ -63,7 +63,7 @@
 							<div class="d-none d-md-block">
 								<div class="row topbar">
 									<div class="col col-2">
-										<h1 class="logo">Human NYC</h1>
+										<h1 class="logo logoWeb">Human NYC</h1>
 									</div>
 									<div class="col col-8">
 										<p><strong>Our team spent two years listening to homeless New Yorkers.</strong><br>This website aims to summarize our findings and push forward sensible reforms that we developed alongside our homeless neighbors.</p>
