--- a/index.html
+++ b/index.html
@@ -62,28 +62,28 @@
 						<div class="cover">
 							<div class="d-none d-md-block">
 								<div class="row topbar">
-									<div class="col col-2">
+									<div class="topMenu col-md-3 col-lg-2">
 										<h1 class="logo logoWeb">Human NYC</h1>
 									</div>
-									<div class="col col-8">
-										<p><strong>Our team spent two years listening to homeless New Yorkers.</strong><br>This website aims to summarize our findings and push forward sensible reforms that we developed alongside our homeless neighbors.</p>
+									<div class="topMenu col-md-6 col-lg-8">
+										<p class="ourTeam"><strong>Our team spent two years listening to homeless New Yorkers.</strong><br>This website aims to summarize our findings and push forward sensible reforms that we developed alongside our homeless neighbors.</p>
 									</div>
-									<div class="col col-2 text-right">
+									<div class="topMenu col-md-3 col-lg-2 text-right">
 										<button type="button" class="btn btn-link nav-modal-link" data-toggle="modal" data-target="#exampleModal">Learn more about us</button>
 									</div>
 								</div>
 							</div>
 							<div class="row">
-								<div class="col-sm-12 col-md-4 text-center">
+								<div class="col-sm-12 col-md-4 col-lg-5 text-center">
 									<h2 class="coverTitle">New York City&apos;s<br> Street-to-Home Journey</h2>
 									<div id="quote">
 										<p>Click to explore a specific point<br/>
 										Scroll down to start at the beginning</p>
 									</div>
 								</div>
-								<div class="col-sm-12 col-md-8 d-none d-md-block">
+								<div class="col-sm-12 col-md-8 col-lg-7 d-none d-md-block">
 									<div class="path">
-										<svg width="100%" height="100%" version="1.1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" style="overflow: visible;">
+										<svg class="mainPath" width="100%" height="100%" version="1.1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" style="overflow: visible;">
 										    <desc>Human.nyc path</desc>
 										    <g id="path" stroke="none" stroke-width="1" fill="none" fill-rule="evenodd" stroke-linecap="round" stroke-linejoin="round">
 										        <g id="Artboard" transform="translate(0, 10)" stroke="#707070" stroke-width="2">
