trying to fix the nav pushing the content on mobile

--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 	    <script type="text/javascript" src="js/script.js"></script>
 	</head>
 	<body>
-		<nav class="navbar navbar-expand-lg sticky-top navbar-light bg-light d-md-none d-lg-none d-xl-none">
+		<nav class="navbar navbar-expand-lg sticky-top navbar-light bg-light d-md-none d-lg-none d-xl-none" style="display: flex">
 			<a class="navbar-brand logo logoMobile" href="#">Human</a>
 			<button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarTogglerDemo03" aria-controls="navbarTogglerDemo03" aria-expanded="false" aria-label="Toggle navigation">
 				<span class="navbar-toggler-icon"></span>
